--- a/sevuelo-frontend/src/app/new-request/new-request.component.html
+++ b/sevuelo-frontend/src/app/new-request/new-request.component.html
@@ -28,6 +28,13 @@
                         Destination is required
                     </div>
                 </div>
+              <div class="form-group">
+                <label class="form-control-label" for="observation">Observation:</label>
+                <input [(ngModel)]="request.observation" type="text" class="form-control"
+                       placeholder="Observation" name="observation" id="observation"
+                       #observation="ngModel"
+                />
+              </div>
                 <button type="button"
                     (click)="previousState()"
                     class="btn btn-info">
@@ -40,7 +47,7 @@
                 </button>
 
             </div>
-            
+
         </form>
     </div>
 </div>
