--- a/sevuelo-frontend/src/app/request-detail/request-detail.component.html
+++ b/sevuelo-frontend/src/app/request-detail/request-detail.component.html
@@ -24,12 +24,19 @@
               </span>
             </label>
         </div>
+        <div>
+          <label>Observation:
+            <span>
+              {{request.observation}}
+            </span>
+          </label>
+        </div>
         <button type="submit"
             (click)="previousState()"
             class="btn btn-info">
           <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
         </button>
-        <button (click)="reserve()" class="btn btn-success">Reserve</button>
+        <button (click)="onChangeStatus()" class="btn btn-success">{{request['status'] === 'NEW' ? 'Reserve' : 'Reverse'}}</button>
     </div>
   </div>
 </div>
