--- a/sevuelo-frontend/src/app/requests/requests.component.html
+++ b/sevuelo-frontend/src/app/requests/requests.component.html
@@ -1,32 +1,46 @@
 <h2>Requests</h2>
 
-<div class="table-responsive" *ngIf="requests && requests.length > 0">
+<div class="table-responsive" >
     <table class="table table-striped" aria-describedby="page-heading">
         <thead>
             <tr>
-                <th scope="col">Id</th>
+              <th scope="col"></th>
+              <th scope="col">Id</th>
                 <th scope="col">Passenger</th>
                 <th scope="col">Destination</th>
                 <th scope="col">Status</th>
-                <th scope="col"></th>
+
+
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let request of requests">
+                <td class="text-center">
+                  <div class="btn-group">
+                    <button type="submit"
+                            routerLink="/requests/{{request.id}}"
+                            class="btn btn-info btn-sm">
+                      <fa-icon icon="eye"></fa-icon>
+                      <span class="d-none d-md-inline">Detail</span>
+                    </button>
+                  </div>
+                  <div class="btn-group">
+                    <button type="button" (click)="onClickDelete(request)"
+                            class="btn btn-danger btn-sm">
+                      <fa-icon icon="remove"></fa-icon>
+                      <span class="d-none d-md-inline">Delete</span>
+                    </button>
+                  </div>
+                </td>
                 <td>{{ request.id }}</td>
                 <td>{{ request.passenger }}</td>
                 <td>{{ request.destination }}</td>
                 <td>{{ request.status }}</td>
-                <td class="text-right">
-                    <div class="btn-group">
-                        <button type="submit"
-                                routerLink="/requests/{{request.id}}"
-                                class="btn btn-info btn-sm">
-                            <fa-icon icon="eye"></fa-icon>
-                            <span class="d-none d-md-inline">View</span>
-                        </button>                        
-                    </div>
-                </td>
+            </tr>
+            <tr *ngIf="requests.length === 0">
+              <td [colSpan]="5" class="text-center">
+                {{messageEmpty}}
+              </td>
             </tr>
         </tbody>
     </table>
