--- a/sevuelo-frontend/src/app/new-request/new-request.component.html
+++ b/sevuelo-frontend/src/app/new-request/new-request.component.html
@@ -28,6 +28,14 @@
                         Destination is required
                     </div>
                 </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="comment">Comment:</label>
+                    <input [(ngModel)]="request.comment" type="text" class="form-control"
+                        placeholder="Comment" name="comment" id="comment"
+                        #comment="ngModel"
+                        />
+                   
+                </div>
                 <button type="button"
                     (click)="previousState()"
                     class="btn btn-info">
