--- a/sevuelo-frontend/src/app/requests/requests.component.html
+++ b/sevuelo-frontend/src/app/requests/requests.component.html
@@ -4,30 +4,37 @@
     <table class="table table-striped" aria-describedby="page-heading">
         <thead>
             <tr>
+                <th scope="col"></th>
                 <th scope="col">Id</th>
                 <th scope="col">Passenger</th>
                 <th scope="col">Destination</th>
                 <th scope="col">Status</th>
-                <th scope="col"></th>
+                
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let request of requests">
-                <td>{{ request.id }}</td>
-                <td>{{ request.passenger }}</td>
-                <td>{{ request.destination }}</td>
-                <td>{{ request.status }}</td>
                 <td class="text-right">
                     <div class="btn-group">
                         <button type="submit"
                                 routerLink="/requests/{{request.id}}"
                                 class="btn btn-info btn-sm">
                             <fa-icon icon="eye"></fa-icon>
-                            <span class="d-none d-md-inline">View</span>
+                            <span class="d-none d-md-inline">Detail</span>
                         </button>                        
                     </div>
                 </td>
+                <td>{{ request.id }}</td>
+                <td>{{ request.passenger }}</td>
+                <td>{{ request.destination }}</td>
+                <td>{{ request.status }}</td>
+          
             </tr>
         </tbody>
     </table>
+</div>
+<div class="table-responsive" *ngIf="requests && requests.length === 0">
+    
+        <h3>No found</h3>
+    
 </div>
